[package]
name = "opensc-sys"
version = "0.20.0"
authors = ["Felix Monninger <felix.monninger@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "FFI bindings to OpenSC"
repository = "https://github.com/heinzelotto/rust-opensc-sys"
readme = "README.org"
categories = ["external-ffi-bindings"]
edition = "2018"

[dependencies]

[build-dependencies]
bindgen = "0.53.2"
