[package]
name = "opensc-sys"
version = "0.1.0"
authors = ["Felix Monninger <felix.monninger@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "FFI bindings to OpenSC"
repository = "https://github.com/heinzelotto/rust-opensc-sys"
readme = "README.md"
categories = ["external-ffi-bindings"]
edition = "2018"

exclude = [
    "OpenSC/**",
    "!OpenSC/src/**",
]

[features]
default = ["enable_openssl", "enable_sm"]

# define the ENABLE_SM flag in the c headers. This makes secure messaging functions available.
enable_sm = ["enable_openssl"]

# define the ENABLE_OPENSSL flag in the c headers. OpenSSL must be present on the system.
enable_openssl = []

[dependencies]

[build-dependencies]
bindgen = "0.53.2"
